# app/Http/Controllers/PisosController.php
@@ -85,6 +85,21 @@ class PisosController extends Controller
         //
     }
 
+    /**
+    * @OA\Get(
+    *     path="/listaPisos/{tiempoToken}",
+    *     description="Listar los pisos",
+    *     operationId="listaPisos",
+    *     @OA\Response(
+    *         response="default",
+    *         description="Ha ocurrido un error."
+    *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Datos pisos."
+    *     )
+    * )
+    */
     public function listaPisos(){
         $pisos = Pisos::where("estado", 1)->get();
 
